--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
 
       <header>
-        <h1>Katieimd415</h1>
-        <p>A test for IM215 8:30 class</p>
+        <h1>Katie Nelligan Portfolio</h1>
+        <p>Working towards a colourful tomorrow.</p>
       </header>
 
       <div id="banner">
