--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/katienelligan/katieIMD415" class="button fork"><strong>Hi this is Katie Nelligan's site.</strong></a>
+        <a href="https://github.com/katienelligan/katieIMD415" class="button fork"><strong>HOME</strong></a>
         <div class="downloads">
           <span>Downloads:</span>
           <ul>
