--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Katie Nelligan's site!</h3>
 
-<p>This is a collection of my recent work created in graphic and web design.</p>
+<p>This is a collection of my work created in graphic and web design.</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
