--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="/assets/example/bg_suburb.jpg">
+          <img src="/assets/island1.jpg">
           <div class="container">
             <div class="carousel-caption">
               <h2>Web Design and Development</h2>
