--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="/assets/example/bg_6.jpg">
+          <img src="/assets/snowman1.jpg">
           <div class="container">
             <div class="carousel-caption">
               <h2>3D Graphics Design</h2>
