--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="Revolutionix" />
 		
 		<!-- Title -->
-		<title>Flip Resume - A book style resume theme</title>
+		<title>Katie Nelligan Portfolio</title>
 		
 		<!-- Favicon -->
 		<link href="images/favicon.ico" rel="shortcut icon"/> 
@@ -71,7 +71,7 @@
 						<li><a href="#" data-page="3">Education</a></li>
 						<li><a href="#" data-page="4">Experience</a></li>
 						<li><a href="#" data-page="5">Skills</a></li>
-						<li><a href="#" data-page="6">Portfolio</a></li>
+						<li><a href="#" data-page="6">Featured Work</a></li>
 						<li><a href="#" data-page="7">Contact</a></li>
 					  </ul>
 					</div><!-- /.navbar-collapse -->
@@ -91,8 +91,8 @@
 					  <div class="row" id="first-page">
               <div class="col-sm-12 text-center">
                 <div class="dp-box">
-                  <h1 class="hidden-sm hidden-xs"><img class="dp" id="dp" src="images/dp.jpg" alt="Display Picture" /> John Doe</h1>
-                  <div class="visible-xs visible-sm"><img class="dp" id="dp" src="images/dp.jpg" alt="Display Picture" /><h1>John Doe</h1></div>
+                  <h1 class="hidden-sm hidden-xs"><img class="dp" id="dp" src="images/me.jpg" alt="Display Picture" /> Katie Nelligan</h1>
+                  <div class="visible-xs visible-sm"><img class="dp" id="dp" src="images/me.jpg" alt="Display Picture" /><h1>Katie Nelligan</h1></div>
                 </div>
               </div>
               <div class="col-xs-8 col-xs-offset-2 text-center">
