--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               </div>
               <div class="col-xs-8 col-xs-offset-2 text-center">
                 <h2>
-                  PROFESSIONAL GRAPHIC DESIGNER.
+                  GRAPHIC AND WEB DESIGNER.
                 </h2>
                 <p class="social-buttons">
                   <a class="btn btn-circle" href="#"><i class="fa fa-facebook"></i></a>
