--- a/index.html
+++ b/index.html
@@ -159,40 +159,40 @@
 									<div class="col-md-6">
 										<div class="blockquote-box blockquote-primary clearfix animateBounceInLeft">
 											<div class="square pull-left">
-												<i class="fa fa-calendar"></i> 1997 - 2005
+												<i class="fa fa-calendar"></i> 1998 - 2006
 											</div>
-											<h2>Senior school</h2>
+											<h2>Grade School</h2>
 											<p class="text-justify">
-												Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+												Attended Holy Cross Catholic School in Thunder Bay Ontario.
 											</p>
 										</div>
 										<div class="blockquote-box blockquote-success clearfix animateBounceInLeft">
 											<div class="square pull-left">
-												<i class="fa fa-calendar"></i> 2005 - 2007
+												<i class="fa fa-calendar"></i> 2006 - 2008
 											</div>
-											<h2>High school</h2>
+											<h2>Junior High School</h2>
 											<p class="text-justify">
-												Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat aante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat aante.
+												Attended Bishop E.Q. Jennings School
 											</p>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="blockquote-box blockquote-warning clearfix animateBounceInRight">
 											<div class="square pull-left">
-												<i class="fa fa-calendar"></i> 2005 - 2007
+												<i class="fa fa-calendar"></i> 2008 - 2012
 											</div>
-											<h2>University</h2>
+											<h2>High School</h2>
 											<p class="text-justify">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat aante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat aante..
+                       Attended St. Ignatius High School
 											</p>
 										</div>
 										<div class="blockquote-box blockquote-danger clearfix animateBounceInRight">
 											<div class="square pull-left">
-												<i class="fa fa-calendar"></i> 2005 - 2007
+												<i class="fa fa-calendar"></i> 2013 - 2016
 											</div>
-											<h2>High school</h2>
+											<h2>College</h2>
 											<p class="text-justify">
-												Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat aante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat aante.
+												Currently attending Confederation College in the Interactive Media Development Program.
 											</p>
 										</div>
 									</div>
