Content Changes - Skills

--- a/index.html
+++ b/index.html
@@ -261,30 +261,30 @@
                   <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                     <div class="progress">
                       <div class="progress-bar progress-bar-striped active" role="progressbar" data-transitiongoal="70">
-                        <span class="sr-only">70% Complete (success)</span>
+                        <span class="sr-only">75% Complete (success)</span>
                       </div>
-                      <span class="progress-type">ASP.Net</span>
+                      <span class="progress-type">Adobe Photoshop/Illustrator</span>
                       <span class="progress-completed">70%</span>
                     </div>
                     <div class="progress">
                       <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" data-transitiongoal="55"></div>
-                      <span class="progress-type">Java</span>
+                      <span class="progress-type">HTML5 / CSS</span>
                       <span class="progress-completed">55%</span>
                     </div>
                     <div class="progress">
                       <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" data-transitiongoal="90"></div>
                       <span class="progress-type">Bootstrap</span>
-                      <span class="progress-completed">90%</span>
+                      <span class="progress-completed">95%</span>
                     </div>
                     <div class="progress">
                       <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" data-transitiongoal="80"></div>
-                      <span class="progress-type">Ruby On Rails</span>
-                      <span class="progress-completed">80%</span>
+                      <span class="progress-type">Javascript</span>
+                      <span class="progress-completed">50%</span>
                     </div>
                     <div class="progress">
                       <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" data-transitiongoal="75"></div>
-                      <span class="progress-type">Javascript</span>
-                      <span class="progress-completed">75%</span>
+                      <span class="progress-type">3D Studio Max</span>
+                      <span class="progress-completed">70%</span>
                     </div>
                   </div>
                 </div>
@@ -293,7 +293,7 @@
                     <div class="well">
                       <h3>Web Development</h3>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Starting with the basics, I enjoy creating responsive web pages with the combined use of Bootstrap and CSS. 
                       </p>
                     </div>
                   </div>
@@ -301,7 +301,7 @@
                     <div class="well">
                       <h3>Design</h3>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Using programs such as Photoshop, Illustrator, and InDesign, I enjoy creating graphically pleasing content such as logos, banners, advertisements, posters, album covers, concert art, etc.
                       </p>
                     </div>
                   </div>
