--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					  <div class="row" id="first-page">
               <div class="col-sm-12 text-center">
                 <div class="dp-box">
-                  <h1 class="hidden-sm hidden-xs"><img class="dp" id="dp" src="images/logo_1.png" alt="Display Picture" /> </h1>
+                  <h1 class="hidden-sm hidden-xs"><img class="dp" id="dp" src="images/me.jpg" alt="Display Picture" /> </h1>
                   
                 </div>
               </div>
