--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                 </div>
               </div>
               <div class="col-xs-8 col-xs-offset-2 text-center">
+                  <h3>KATIE NELLIGAN</h3>
                 <h2>
                   GRAPHIC AND WEB DESIGNER.
                 </h2>
