Lots of change.

--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
                 </div>
               </div>
               <div class="col-xs-8 col-xs-offset-2 text-center">
-                  <h3>KATIE NELLIGAN</h3>
-                <h2>
+                  <h2>KATIE NELLIGAN</h2>
+                <h3>
                   GRAPHIC AND WEB DESIGNER.
-                </h2>
+                </h3>
+                  <p>I am a current student at Confederation College, where I am studying Interactive Media Development. I take courses such as Wed Development, Graphic Design, 3D Graphics, Photography, Interactive Design, etc. Feel free to browse through my interactive Portfolio built with Twitter Bootstrap.</p>
+                  <p>    Use the left and right arrow keys on your page to begin the journey.</p>
                 <p class="social-buttons">
                   <a class="btn btn-circle" href="#"><i class="fa fa-facebook"></i></a>
                   <a class="btn btn-circle" href="#"><i class="fa fa-google"></i></a>
@@ -316,41 +318,41 @@
 					<div class="bb-item" id="page-5">
 						<div class="bb-custom-side" id="portfolio">
 							<div class="bb-custom-container">
-								<h1 class="text-center"><span class="page-heading">Portfolio</span></h1>
+								<h1 class="text-center"><span class="page-heading">Featured Work</span></h1>
 								<div class="row">
 									<div class="col-sm-6 col-md-4 text-center">
 										<div class="portfolio-item animateFlipInY">
-											<p><img src="images/pencil.png" alt="Pencil icon"/></p>
-											<h4>Mobile Application</h4>
-											<p>Croissant pudding gingerbread gummi bears marshmallow halvah puri khalo.</p>
+											<p><img src="images/app.png" alt="App"/></p>
+											<h4>Mobile Application Development</h4>
+											<p>Developed a working application using Illustrator, Photoshop, Flash, and ActionScript.</p>
 										</div>
 									</div>
 									<div class="col-sm-6 col-md-4 text-center animateFlipInX">
 										<div class="portfolio-item">
-											<p><img src="images/clock.png" alt="Clock icon"/></p>
-											<h4>Mobile Application</h4>
-											<p>Croissant pudding gingerbread gummi bears marshmallow halvah puri khalo.</p>
+											<p><img src="images/fresh.jpg" alt="Fresh"/></p>
+											<h4>Graphic Design Assignment</h4>
+											<p>Goal was to convey a message with a font, using a real-life item.</p>
 										</div>
 									</div>
 									<div class="col-sm-6 col-md-4 text-center animateFlipInY">
 										<div class="portfolio-item">
-											<p><img src="images/bookShell.png" alt="Book Shell icon"/></p>
-											<h4>Mobile Application</h4>
-											<p>Croissant pudding gingerbread gummi bears marshmallow halvah puri khalo.</p>
+											<p><img src="images/island1.jpg" alt="Island"/></p>
+											<h4>3D Design</h4>
+											<p>Island scene created in 3D Studio Max.</p>
 										</div>
 									</div>
 									<div class="col-sm-6 col-md-4 text-center animateFlipInX">
 										<div class="portfolio-item">
-											<p><img src="images/calendar.png" alt="Calendar icon"/></p>
-											<h4>Mobile Application</h4>
-											<p>Croissant pudding gingerbread gummi bears marshmallow halvah puri khalo.</p>
+											<p><img src="images/snow.jpg" alt="Snowman"/></p>
+											<h4>3D Design</h4>
+											<p>Snowman scene created in 3DS Max.</p>
 										</div>
 									</div>
 									<div class="col-sm-6 col-md-4 text-center animateFlipInY">
 										<div class="portfolio-item">
-											<p><img src="images/film.png" alt="Film icon"/></p>
-											<h4>Mobile Application</h4>
-											<p>Croissant pudding gingerbread gummi bears marshmallow halvah puri khalo.</p>
+											<p><img src="images/phil.png" alt="Phil"/></p>
+											<h4>Flash Game Development</h4>
+											<p>Created a game using Flash Builder, Flash CC, and Illustrator/Photoshop.</p>
 										</div>
 									</div>
 									<div class="col-sm-6 col-md-4 text-center animateFlipInX">
