--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                 </h3>
                   <p>I am a current student at Confederation College, where I am studying Interactive Media Development. I take courses such as Wed Development, Graphic Design, 3D Graphics, Photography, Interactive Design, etc. Feel free to browse through my interactive Portfolio built with Twitter Bootstrap.</p>
                   <p>    Use the left and right arrow keys on your page to begin the journey.</p>
+                  <br><br><br><br><br>
                 <p class="social-buttons">
                   <a class="btn btn-circle" href="#"><i class="fa fa-facebook"></i></a>
                   <a class="btn btn-circle" href="#"><i class="fa fa-google"></i></a>
@@ -213,11 +214,11 @@
 								<div class="row">
 									<div class="col-sm-6 animateFadeInUp">
 										<div class="panel panel-default">
-											<div class="panel-heading"><i class="fa fa-2x fa-twitter blue"></i> Twitter</div>
+											<div class="panel-heading"><i class="fa fa-2x fa-twitter blue"></i> Coding</div>
 											<div class="panel-body">
-												Jujubes fruitcake tiramisu liquorice chocolate cake. Carrot cake faworki donut soufflé oat cake tootsie roll. Fruitcake fruitcake cake sweet pie jelly beans. Chocolate cake candy jujubes.
+												Learned canvas, divs, and other basic elements to coding at the beginning. Once introduced to Bootstrap and Wordpress, I realized that creating visually appealing websites is something I absolutely love doing. I can adopt a theme and customize it by making many changes to CSS, and HTML files to make a website to suit almost any company or individual's needs. I have created travel sites, Wordpress Blogs, and Personal portfolios. I have knowledge in FTP, and domain hosting.
 											</div>
-											<div class="panel-footer">Worked as web designer, From 2014 to present</div>
+											<div class="panel-footer">Started coding in 2013.</div>
 										</div>
 									</div>
 									<div class="col-sm-6 animateFadeInUp">
@@ -319,6 +320,9 @@
 						<div class="bb-custom-side" id="portfolio">
 							<div class="bb-custom-container">
 								<h1 class="text-center"><span class="page-heading">Featured Work</span></h1>
+                                <div class="col-xs-8 col-xs-offset-2 text-center">
+                                    <p>Below is a collection of some of my work, visually arranged so you can see the different projects I have worked on. </p>
+                                    </div>
 								<div class="row">
 									<div class="col-sm-6 col-md-4 text-center">
 										<div class="portfolio-item animateFlipInY">
@@ -414,10 +418,9 @@
 									<div class="col-sm-6">
 										<div id="contact-map"></div>
 										<address class="pull-right">
-											<strong>Twitter, Inc.</strong><br>
-											795 Folsom Ave, Suite 600<br>
-											San Francisco, CA 94107<br>
-											<abbr title="Phone">P:</abbr> (123) 456-7890
+											<strong>Katie Nelligan Inc.</strong><br>
+											Thunder Bay, ONT<br>
+											<abbr title="Phone">P:</abbr> (807) 629-9063
 										</address>
 									</div>
 								</div>
@@ -459,21 +462,9 @@
       ga('create', 'UA-54392055-1', 'auto');
       ga('send', 'pageview');
     </script>
-		
-		<!-- Theme change plugin, make sure to remove before deploying into production -->
-		<div class="slide-out-div">
-			<a class="handle" href="#"></a>
-			<h3>Change Color</h3>
-			<ul id="color-switcher" class="list-inline">
-				<li><a href="#" data-rel="css/theme-colors/orange.css"><img src="images/orange-theme.png" alt="Orange Theme Color" /></a></li>
-				<li><a href="#" data-rel="css/theme-colors/green.css"><img src="images/green-theme.png" alt="Green Theme Color" /></a></li>
-				<li><a href="#" data-rel="css/theme-colors/blue.css"><img src="images/blue-theme.png" alt="Blue Theme Color" /></a></li>
-				<li><a href="#" data-rel="css/theme-colors/red.css"><img src="images/red-theme.png" alt="Red Theme Color" /></a></li>
-				<li><a href="#" data-rel="css/theme-colors/purple.css"><img src="images/purple-theme.png" alt="Purple Theme Color" /></a></li>
-				<li><a href="#" data-rel="css/theme-colors/dark.css"><img src="images/dark-theme.png" alt="Dark Theme Color" /></a></li>
-				<li><a href="#" data-rel="css/theme-colors/glade.css"><img src="images/glade-theme.png" alt="Glade Theme Color" /></a></li>
-				<li><a href="#" data-rel="css/theme-colors/kimberly.css"><img src="images/kimberly-theme.png" alt="Kimberly Theme Color" /></a></li>
-			</ul>
-		</div>
+
+	
+
+	
 	</body>
 </html>
